revisi lagi cik

--- a/Tugas_Akhir_Latex_Source/halaman-depan/cover.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/cover.tex
@@ -41,7 +41,7 @@
         \textbf{\namaDosenPembimbingSatu}\\[2mm]
         \large{NIP 196003031987011002}\\[2mm]
         \textbf{\namaDosenPembimbingDua}\\[2mm]
-        \large{NIP 199101132020122006}\\[2mm]
+        \large{NIP \nipDosenPembimbingDua}\\[2mm]
     }}}
     
     \vspace{15mm}
