--- a/Tugas_Akhir_Latex_Source/halaman-depan/kataPengantar.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/kataPengantar.tex
@@ -6,22 +6,23 @@
     \pagestyle{fancy}
 \end{center}
 
-Puji syukur kepada Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga laporan Tugas Akhir dapat diselesaikan dengan baik. Laporan kerja praktik yang berjudul “\judulTA” disusun berdasarkan hasil komputasi menggunakan metode DFT dan MD. Dalam menyusun laporan Tugas Akhir ini, terima kasih diucapkan kepada semua pihak yang turut membantu dan membimbing selama kegiatan berlangsung, diantaranya kepada:
+Puji syukur kepada Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga laporan Tugas Akhir dapat diselesaikan dengan baik. Laporan Tugas Akhir yang berjudul “\judulTA” disusun berdasarkan hasil komputasi menggunakan metode DFT dan MD. Dalam menyusun laporan Tugas Akhir ini, terima kasih diucapkan kepada semua pihak yang turut membantu dan membimbing selama kegiatan berlangsung, diantaranya kepada:
 \begin{enumerate}
     \item Prof. Dr. Darminto, M.Sc. selaku Dosen Pembimbing Pertama yang telah memberikan dukungan dan bimbingan sehingga penulis dapat menyelesaikan Tugas Akhir dengan baik.
     \item Retno Asih, M.Si., Ph.D. selaku Dosen Pembimbing Pertama yang telah memberikan dukungan dan bimbingan terutama pada teknis komputasi sehingga penulis dapat menyelesaikan Tugas Akhir dengan baik.
-    \item Lila Yuwana selaku Kepala Departemen Fisika, Institut Teknologi Sepuluh Nopember yang selalu membantu mahasiswanya dalam urusan akademik maupun non-akademik.
-    \item Rekan-rekan tim riset Grafena/hBN, Mas Ari June Tyas Nenohai, Mas Fathan Muyassar Santana yang telah memberikan dukungan dan saling membantu dalam menyiapkan Kerja Praktik ini
-    \item Teman-teman angkatan 2021 (Gluon) yang selalu memberi dukungan dalam 
+    \item Dr. Lila Yuwana, M.Si. selaku Kepala Departemen Fisika, Institut Teknologi Sepuluh Nopember yang selalu membantu mahasiswanya dalam urusan akademik maupun non-akademik.
+    \item Rekan-rekan tim riset Grafena/hBN, Mas Ari June Tyas Nenohai, Mas Fathan Muyassar Santana yang telah memberikan dukungan dan saling membantu dalam menyiapkan Tugas Akhir ini
+    \item Teman-teman angkatan 2021 (Gluon) yang selalu memberi dukungan dalam menyusun Tugas Akhir ini
+    \item Orang tua dan adik yang senantiasa mendukung dan memberi doa.
     \item Semua pihak yang tidak dapat penulis sebutkan satu-persatu
-    %\item Orang tua dan adik yang senantiasa mendukung dan memberi doa.
+    
 \end{enumerate}
 Penyusunan laporan ini masih jauh dari kata sempurna, oleh karena itu kritik dan saran yang membangun sangat diharapkan demi kesempurnaan laporan ini. Semoga laporan ini bermanfaat bagi kita semua.
 \vspace{6mm}
 
 \begin{flushright}
 
-\namaKota, Juni 2025
+\namaKota, 19 Juni 2025
 
 \vspace{15mm}
 
