--- a/Tugas_Akhir_Latex_Source/halaman-depan/pengesahan.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/pengesahan.tex
@@ -66,6 +66,6 @@
 \end{center}
 
 \begin{center}
-  \textbf{\MakeUppercase{Surabaya Juni, 2025}}
+  \textbf{\MakeUppercase{Surabaya, 19 Juni 2025}}
 \end{center}
 \endgroup
