--- a/Tugas_Akhir_Latex_Source/halaman-depan/pernyataan-keaslian.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/pernyataan-keaslian.tex
@@ -10,32 +10,36 @@
 
 % Ubah paragraf-paragraf berikut sesuai dengan yang ingin diisi pada pernyataan keaslian
 
-\noindent Yang bertanda tangan dibawah ini:
+\noindent Yang bertanda tangan di bawah ini:
 
 \noindent\begin{tabularx}{\textwidth}{l l X}
-                         &   &                            \\
-  Nama Mahasiswa / NRP   & : & \namaMahasiswa / \noIndukMahasiswa           \\
-  Departemen             & : & Fisika              \\
-  Dosen Pembimbing / NIP & : & \namaDosenPembimbingSatu / \nipDosenPembimbingSatu \\
-                         &   &                            \\
+                         &   &                                        \\
+  Nama Mahasiswa / NRP   & : & \namaMahasiswa{} / \noIndukMahasiswa  \\
+  Departemen             & : & Fisika                                 \\
+  Dosen Pembimbing I / NIP   & : & \namaDosenPembimbingSatu / \nipDosenPembimbingSatu   \\
+  Dosen Pembimbing II / NIP  & : & \namaDosenPembimbingDua / \nipDosenPembimbingDua    \\
+                         &   &                                        \\
 \end{tabularx}
 
-Dengan ini menyatakan bahwa Tugas Akhir dengan judul "\judulTA" adalah hasil karya sendiri, berfsifat orisinal, dan ditulis dengan mengikuti kaidah penulisan ilmiah.
+Dengan ini menyatakan bahwa Tugas Akhir dengan judul "\judulTA" adalah hasil karya sendiri, bersifat orisinal, dan ditulis dengan mengikuti kaidah penulisan ilmiah.
 
 Bilamana di kemudian hari ditemukan ketidaksesuaian dengan pernyataan ini, maka saya bersedia menerima sanksi sesuai dengan ketentuan yang berlaku di Institut Teknologi Sepuluh Nopember.
 
-\vspace{8ex}
+\vspace{4ex}
 
 \noindent\begin{tabularx}{\textwidth}{X l}
-                     & Surabaya, Juni 2025 \\
-                     &                                   \\
-  Mengetahui         &                                   \\
-  Dosen Pembimbing   & Mahasiswa                         \\
-                     &                                   \\
-                     &                                   \\
-                     &                                   \\
-                     &                                   \\
-                     &                                   \\
-  \namaDosenPembimbingSatu         &\namaMahasiswa                           \\
-  NIP. \nipDosenPembimbingSatu{} & NRP. \noIndukMahasiswa                       \\
+                     & Surabaya, 19 Juni 2025 \\
+                     &                                        \\
+  Mengetahui         &                                        \\
+  Dosen Pembimbing I & Mahasiswa                              \\
+                     &                                        \\
+                     &                                        \\
+  \namaDosenPembimbingSatu         & \namaMahasiswa                     \\
+  NIP. \nipDosenPembimbingSatu{} & NRP. \noIndukMahasiswa                 \\
+                     &                                        \\
+  Dosen Pembimbing II &                                       \\
+                     &                                        \\
+                     &                                        \\
+  \namaDosenPembimbingDua         &                                       \\
+  NIP. \nipDosenPembimbingDua{}   &                                       \\
 \end{tabularx}
