--- a/Tugas_Akhir_Latex_Source/pengaturan.tex
+++ b/Tugas_Akhir_Latex_Source/pengaturan.tex
@@ -35,6 +35,7 @@
 \usepackage{threeparttable}
 \usepackage{eso-pic} 
 \usepackage{tabularx}
+\usepackage{placeins}
 
 
 %======================================================================
