ngurangi size bjir

--- a/Tugas_Akhir_Latex_Source/halaman-depan/kataPengantar.tex
+++ b/Tugas_Akhir_Latex_Source/halaman-depan/kataPengantar.tex
@@ -9,7 +9,7 @@
 Puji syukur kepada Allah SWT yang telah memberikan rahmat dan hidayah-Nya sehingga laporan Tugas Akhir dapat diselesaikan dengan baik. Laporan Tugas Akhir yang berjudul “\judulTA” disusun berdasarkan hasil komputasi menggunakan metode DFT dan MD. Dalam menyusun laporan Tugas Akhir ini, terima kasih diucapkan kepada semua pihak yang turut membantu dan membimbing selama kegiatan berlangsung, diantaranya kepada:
 \begin{enumerate}
     \item Prof. Dr. Darminto, M.Sc. selaku Dosen Pembimbing Pertama yang telah memberikan dukungan dan bimbingan sehingga penulis dapat menyelesaikan Tugas Akhir dengan baik.
-    \item Retno Asih, M.Si., Ph.D. selaku Dosen Pembimbing Pertama yang telah memberikan dukungan dan bimbingan terutama pada teknis komputasi sehingga penulis dapat menyelesaikan Tugas Akhir dengan baik.
+    \item Retno Asih, M.Si., Ph.D. selaku Dosen Pembimbing Kedua yang telah memberikan dukungan dan bimbingan terutama pada teknis komputasi sehingga penulis dapat menyelesaikan Tugas Akhir dengan baik.
     \item Dr. Lila Yuwana, M.Si. selaku Kepala Departemen Fisika, Institut Teknologi Sepuluh Nopember yang selalu membantu mahasiswanya dalam urusan akademik maupun non-akademik.
     \item Rekan-rekan tim riset Grafena/hBN, Mas Ari June Tyas Nenohai, Mas Fathan Muyassar Santana yang telah memberikan dukungan dan saling membantu dalam menyiapkan Tugas Akhir ini
     \item Teman-teman angkatan 2021 (Gluon) yang selalu memberi dukungan dalam menyusun Tugas Akhir ini
