--- a/Tugas_Akhir_Latex_Source/konten/bab01.tex
+++ b/Tugas_Akhir_Latex_Source/konten/bab01.tex
@@ -18,14 +18,14 @@ Lebih dari sekadar komponen pasif, sifat-sifat intrinsik hBN dapat dimodifikasi 
 
 Untuk menyelidiki fenomena kompleks ini, pendekatan komputasi multi-skala yang menggabungkan Dinamika Molekuler (MD) dan Teori Fungsional Kerapatan (DFT) telah menjadi alat yang sangat ampuh. MD memungkinkan simulasi evolusi struktur atomik di bawah pengaruh termal, sementara DFT menyediakan perhitungan sifat elektronik dan magnetik dari prinsip pertama untuk struktur yang dihasilkan. Namun, kekuatan prediksi dari alur kerja komputasi ini sangat bergantung pada akurasi model fisika yang mendasarinya, yaitu potensial interatomik yang digunakan dalam MD dan fungsional tukar-tambah-hubungan dalam DFT. Setiap keterbatasan dalam model-model ini dapat merambat dan berpotensi menghasilkan artefak komputasi.
 
-Oleh karena itu, penelitian ini tidak hanya bertujuan untuk melaporkan hasil simulasi, tetapi juga untuk melakukan evaluasi kritis terhadap metodologi yang digunakan. Dengan mengeksplorasi pengaruh temperatur dan cacat antisite (N$_B$ dan B$_N$) pada monolayer hBN, penelitian ini berupaya untuk mengungkap fisika menarik yang muncul—seperti ketergantungan temperatur anomali pada celah pita dan induksi magnetisme—dengan secara sistematis mempertimbangkan sejauh mana temuan ini dapat dipercaya dalam batas-batas pendekatan komputasi yang dipilih.
+Oleh karena itu, penelitian ini tidak hanya bertujuan untuk melaporkan hasil simulasi, tetapi juga untuk melakukan evaluasi kritis terhadap metodologi yang digunakan. Dengan mengeksplorasi pengaruh temperatur dan cacat titik NN dan BB pada monolayer hBN, penelitian ini berupaya untuk mengungkap fisika menarik yang muncul—seperti ketergantungan temperatur anomali pada celah pita dan induksi magnetisme—dengan secara sistematis mempertimbangkan sejauh mana temuan ini dapat dipercaya dalam batas-batas pendekatan komputasi yang dipilih.
 
 \section{Rumusan Masalah}
 Berdasarkan latar belakang yang telah diuraikan, rumusan masalah dalam penelitian ini difokuskan untuk menjawab pertanyaan-pertanyaan fundamental berikut:
 \begin{enumerate}
     \item Bagaimana pengaruh temperatur (800 K, 1100 K, dan 1225 K) terhadap struktur elektronik, khususnya celah pita energi, dari monolayer hBN murni?
-    \item Sejauh mana cacat antisite (N$_B$ dan B$_N$) memodifikasi struktur elektronik dan bagaimana respons termal dari sistem dengan cacat ini berbeda secara kualitatif dari sistem murni?
-    \item Apakah cacat antisite B$_N$ mampu menginduksi magnetisme pada monolayer hBN yang secara intrinsik non-magnetik, dan bagaimana distorsi struktural yang diinduksi oleh temperatur mempengaruhi kemunculan serta kekuatan momen magnetik tersebut?
+    \item Sejauh mana cacat titik NN dan BB memodifikasi struktur elektronik dan bagaimana respons termal dari sistem dengan cacat ini berbeda secara kualitatif dari sistem murni?
+    \item Apakah cacat titik BB mampu menginduksi magnetisme pada monolayer hBN yang secara intrinsik non-magnetik, dan bagaimana distorsi struktural yang diinduksi oleh temperatur mempengaruhi kemunculan serta kekuatan momen magnetik tersebut?
 \end{enumerate}
 
 \section{Tujuan Penelitian}
@@ -33,15 +33,15 @@ Secara umum, tujuan dari penelitian ini adalah untuk memperoleh pemahaman mendal
 \begin{enumerate}
 \item Menelaah pengaruh variasi temperatur (800 K, 1100 K, dan 1225 K) terhadap struktur elektronik monolayer hBN murni, khususnya dalam konteks perubahan celah pita energi sebagai akibat dari fluktuasi termal.
 
-\item Menganalisis secara sistematis bagaimana keberadaan cacat antisite (N$_B$ dan B$_N$) memodifikasi struktur elektronik serta mengevaluasi respons termal sistem ber-cacat dibandingkan dengan sistem murni, baik dari segi stabilitas struktural maupun perubahan sifat elektroniknya.
+\item Menganalisis secara sistematis bagaimana keberadaan cacat titik NN dan BB memodifikasi struktur elektronik serta mengevaluasi respons termal sistem ber-cacat dibandingkan dengan sistem murni, baik dari segi stabilitas struktural maupun perubahan sifat elektroniknya.
 
-\item Menyelidiki potensi induksi magnetisme oleh cacat antisite B$_N$ pada monolayer hBN yang secara intrinsik bersifat non-magnetik, serta mengevaluasi pengaruh distorsi struktural akibat temperatur terhadap kemunculan dan kekuatan momen magnetik yang dihasilkan.
+\item Menyelidiki potensi induksi magnetisme oleh cacat titik BB pada monolayer hBN yang secara intrinsik bersifat non-magnetik, serta mengevaluasi pengaruh distorsi struktural akibat temperatur terhadap kemunculan dan kekuatan momen magnetik yang dihasilkan.
 \end{enumerate}
 
 \section{Batasan Masalah}
 Untuk menjaga fokus dan kedalaman analisis, penelitian ini dibatasi oleh beberapa parameter berikut:
 \begin{itemize}
-    \item Sistem yang dipelajari adalah monolayer hBN dalam supercell berukuran $4 \times 4 \times 1$ (terdiri dari 32 atom), dengan dan tanpa cacat antisite tunggal (N$_B$ atau B$_N$).
+    \item Sistem yang dipelajari adalah monolayer hBN dalam supercell berukuran $4 \times 4 \times 1$ (terdiri dari 32 atom), dengan dan tanpa cacat titik tunggal NN atau BB.
     \item Simulasi dinamika molekuler dilakukan menggunakan perangkat lunak LAMMPS dengan potensial interatomik ReaxFF. Analisis dinamika seperti RDF dan MSD tidak menjadi fokus utama tetapi menjadi pendukung data sifat elektronik; MD hanya digunakan untuk menghasilkan struktur atomik yang setimbang secara termal.
     \item Perhitungan sifat elektronik dilakukan menggunakan perangkat lunak Quantum ESPRESSO dengan pendekatan DFT. Fungsional yang digunakan adalah PBEsol (GGA) dengan pseudopotensial PAW.
     \item Analisis dilakukan pada tiga titik temperatur diskrit: 800 K, 1100 K, dan 1225 K, yang diwakili oleh potret struktur statis dari simulasi MD.
